--- a/client/style.css
+++ b/client/style.css
@@ -4,6 +4,12 @@
 	color: rgb(99 99 99);
 }
 
+.evaluation-message {
+	font-weight: bold;
+	font-size: xx-large;
+	color: rgb(99 99 99);
+}
+
 .option {
 	width: 100px;
 	height: 50px;
