--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,7 @@
+body {
+	margin: 0px
+}
+
 .question {
 	font-weight: bold;
 	font-size: xx-large;
@@ -26,8 +30,15 @@
 	transition: 0.3s;
 }
 
+.red_border {
+	border-color: rgb(255, 85, 85);
+}
+.green_border {
+	border-color: rgb(128, 245, 18);
+}
+
 .chosen {
-	border-color: rgb(99 99 99);;
+	border-color: rgb(99 99 99);
 	transition: all 0.15s;
 }
 
@@ -49,6 +60,9 @@
 	flex-direction: column;
 	justify-content: center;
 	height: 100vh;
+	width: 100%;
+	overflow-x: hidden;
+	position: relative;
 }
 
 .action-button {
@@ -87,4 +101,22 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.hint-button {
+	cursor: pointer;
+	position: absolute;
+	right: -290px; 
+	top: 100px;
+	font-size: xx-large;
+	color: white;
+	font-weight: bold;
+	background-color: rgb(94 100 196);
+	border-radius: 20px 0px 0px 20px;
+	padding: 15px 50px 15px 50px;
+	transition: 0.3s;
+}
+
+.hint-button:hover {
+	right: 0px; 
 }
