--- a/client/style.css
+++ b/client/style.css
@@ -30,9 +30,14 @@ body {
 	transition: 0.3s;
 }
 
+.grey_background {
+	background-color: rgb(99 99 99);
+}
+
 .red_border {
 	border-color: rgb(255, 85, 85);
 }
+
 .green_border {
 	border-color: rgb(128, 245, 18);
 }
@@ -107,7 +112,7 @@ body {
 	cursor: pointer;
 	position: absolute;
 	right: -290px; 
-	top: 100px;
+	top: 150px;
 	font-size: xx-large;
 	color: white;
 	font-weight: bold;
@@ -119,4 +124,43 @@ body {
 
 .hint-button:hover {
 	right: 0px; 
+}
+
+.progress-bar-line {
+	display: inline-block;
+	width: 80px;
+	height: 30px;
+	background-color: rgb(236, 236, 236);
+	border-width: 3px;
+}
+
+.progress-dot-container {
+	display: inline-block;
+	width: 30px;
+	height: 30px;
+	background-color: rgb(236, 236, 236);;
+}
+
+.progress-dot {
+	display: inline-block;
+	width: 24px;
+	height: 24px;
+	background-color: white;
+	border: 3px solid rgb(236, 236, 236);
+	border-radius: 20px;
+}
+
+.progress-bar-container {
+	position: absolute;
+	top: 50px;
+}
+
+.progress-dot-container:first-child {
+	border-top-left-radius: 20px;
+	border-bottom-left-radius: 20px;
+}
+
+.progress-dot-container:last-child {
+	border-top-right-radius: 20px;
+	border-bottom-right-radius: 20px;
 }
